--- a/src/index.css
+++ b/src/index.css
@@ -38,10 +38,15 @@
 .boxShadow {
   box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.2);
   z-index: 1;
+
 }
 body {
   background-color: black;
   color: white;
+}
+
+.my-border{
+  border: 1.5px solid rgba(255, 255, 255, 0.76);
 }
 
 @media (max-width: 768px) {
