--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ body {
 .desc1{
   word-spacing: 1.5px;
   line-height: 1.8;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 @media (max-width: 768px) {
